完成了国资总览基础效果

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         .bg {
             position: relative;
         }
-
+        
         .bg-top {
             position: absolute;
             top: 0;
@@ -89,11 +89,9 @@
             height: 750px;
         }
 
-        .left {
-        }
+        .left {}
 
-        .right {
-        }
+        .right {}
 
         .center {
             flex: unset;
@@ -587,7 +585,6 @@
                         </div>
                         <div class="left-content">
                             <div id="3d-Pie" style="width:180px;height:180px">
-
                             </div>
                             <div class="left-content-R">
                                 <p>中国银行&nbsp;40% <span class="account-num cn-bank">1665</span></p>
@@ -664,11 +661,12 @@
                         </div>
                         <!-- 双折线图标 -->
                         <div id="doubleDiscount" style="width: 510px; height: 250px;">
-
+                            
                         </div>
                     </div>
                 </div>
             </div>
+
             <!-- 背景 -->
             <div class="bg">
                 <div class="bg-top">
@@ -688,7 +686,6 @@
                 <div class="location">集团总部</div>
             </div>
         </footer>
-
 
         <!--   <h1 style="font-family:PangMenZhengDao;">旁门左道</h1>
         <h1 style="font-family:YouShe">优设字体</h1>
