完成了国资总览的效果

--- a/overviewOfAssets.html
+++ b/overviewOfAssets.html
@@ -69,7 +69,7 @@
                 <span>党建管理</span>
                 <span>风险分析</span>
             </div>
-        </header> 
+        </header>
 
         <!-- 主体内容 -->
         <div class="relative h-[750px] overflow-hidden">
@@ -190,9 +190,102 @@
                             style=" transform: translate3d(0px, 40px, 0px) rotate3d(1, 0, 0, 121deg);"
                             src="assets/images/kv-s2.png" alt="">
                     </div>
-                    
+
                     <!-- 两侧图片 -->
-                     <div></div>
+                    <div class="absolute w-[980px] h-[700px] z-[-1] flex justify-between">
+                        <!-- 左侧 -->
+                        <div class="w-[225px] h-[700px]  flex flex-col justify-center">
+                            <div class="ml-[40px] w-[225px] h-[70px] mb-[36px]  relative">
+                                <img class="absolute top-[18px] left-[26px] z-[1]" src="assets/images/d1-1.png" alt="">
+                                <img class="absolute" src="assets/images/d1.png" alt="">
+                                <p
+                                    class="absolute z-[1] font-PangMenZhengDao text-[#f1f1f1] leading-[65px] indent-[78px] w-[225px] h-[70px]">
+                                    资产总额
+                                    <span class="text-[20px] font-Oswald">908</span>
+                                </p>
+
+                            </div>
+                            <div class="w-[225px] h-[70px] mb-[36px]  relative">
+                                <img class="absolute top-[18px] left-[26px] z-[1]" src="assets/images/d1-2.png" alt="">
+                                <img class="absolute" src="assets/images/d1.png" alt="">
+                                <p
+                                    class="absolute z-[1] font-PangMenZhengDao text-[#f1f1f1] leading-[65px] indent-[78px] w-[225px] h-[70px]">
+                                    利润总额
+                                    <span class="text-[20px] font-Oswald">1448</span>
+                                </p>
+
+                            </div>
+                            <div class="w-[225px] h-[70px] mb-[36px] relative">
+                                <img class="absolute top-[18px] left-[26px] z-[1]" src="assets/images/d1-3.png" alt="">
+                                <img class="absolute" src="assets/images/d1.png" alt="">
+                                <p
+                                    class="absolute z-[1] font-PangMenZhengDao text-[#f1f1f1] leading-[65px] indent-[78px] w-[225px] h-[70px]">
+                                    营业收入
+                                    <span class="text-[20px] font-Oswald">2936</span>
+                                </p>
+
+                            </div>
+                            <div class="ml-[40px]  w-[225px] h-[70px] mb-[36px]  relative">
+                                <img class="absolute top-[18px] left-[26px] z-[1]" src="assets/images/d1-4.png" alt="">
+                                <img class="absolute" src="assets/images/d1.png" alt="">
+                                <p
+                                    class="absolute z-[1] font-PangMenZhengDao text-[#f1f1f1] leading-[65px] indent-[78px] w-[225px] h-[70px]">
+                                    职工人数
+                                    <span class="text-[20px] font-Oswald">2136</span>
+                                </p>
+                            </div>
+                        </div>
+                        <!-- 右侧 -->
+                        <div class="w-[225px] h-[700px]  flex flex-col justify-center">
+                            <div class=" w-[225px] h-[70px] mb-[36px]  relative">
+                                <img class="absolute rotate-180" src="assets/images/d1.png" alt="">
+                                <img class="absolute top-[24px] right-[26px] z-[1] " src="assets/images/d1-5.png"
+                                    alt="">
+
+                                <p
+                                    class="absolute z-[1] font-PangMenZhengDao text-[#f1f1f1] leading-[65px] indent-[20px] w-[225px] h-[70px]">
+                                    所有者权益
+                                    <span class="text-[20px] font-Oswald">2078</span>
+                                </p>
+                            </div>
+                            <div class="ml-[40px] w-[225px] h-[70px] mb-[36px]  relative">
+                                <img class="absolute rotate-180" src="assets/images/d1.png" alt="">
+                                <img class="absolute top-[24px] right-[26px] z-[1] " src="assets/images/d1-6.png"
+                                    alt="">
+
+                                <p
+                                    class="absolute z-[1] font-PangMenZhengDao text-[#f1f1f1] leading-[65px] indent-[20px] w-[225px] h-[70px]">
+                                    负债总数
+                                    <span class="text-[20px] font-Oswald">1447</span>
+                                </p>
+                            </div>
+                            <div class="ml-[40px] w-[225px] h-[70px] mb-[36px]  relative">
+                                <img class="absolute rotate-180" src="assets/images/d1.png" alt="">
+                                <img class="absolute top-[24px] right-[26px] z-[1] " src="assets/images/d1-7.png"
+                                    alt="">
+
+                                <p
+                                    class="absolute z-[1] font-PangMenZhengDao text-[#f1f1f1] leading-[65px] indent-[20px] w-[225px] h-[70px]">
+                                    研发经费
+                                    <span class="text-[20px] font-Oswald">1912</span>
+                                </p>
+                            </div>
+                            <div class=" w-[225px] h-[70px] mb-[36px]  relative">
+                                <img class="absolute rotate-180" src="assets/images/d1.png" alt="">
+                                <img class="absolute top-[24px] right-[26px] z-[1] " src="assets/images/d1-8.png"
+                                    alt="">
+
+                                <p
+                                    class="absolute z-[1] font-PangMenZhengDao text-[#f1f1f1] leading-[65px] indent-[20px] w-[225px] h-[70px]">
+                                    已交税费
+                                    <span class="text-[20px] font-Oswald">2136</span>
+                                </p>
+                            </div>
+
+
+                        </div>
+
+                    </div>
                 </div>
 
 
@@ -293,17 +386,17 @@
 
 
 
-
+        <!-- 底部 -->
+        <footer style="color: white;">
+            <div class="footerInfo">
+                <div class="time">202501</div>
+                <div class="location">集团总部</div>
+            </div>
+        </footer>
     </div>
 
-    <!-- 底部 -->
-    <footer style="color: white;">
-        <div class="footerInfo">
-            <div class="time">202501</div>
-            <div class="location">集团总部</div>
-        </div>
-    </footer>
-    </div>
+
+
 
 
     <!-- <h1 class="font-[PangMenZhengDao]">国资总览</h1>
